--- a/app/src/main/res/layout/activity_get_data.xml
+++ b/app/src/main/res/layout/activity_get_data.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="governmental.service.egypt.GetData">
 
+    <TextView
+        android:id="@+id/textView"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="93dp" />
 </android.support.constraint.ConstraintLayout>
