--- a/app/src/main/res/layout/activity_add_papers_service_dialog.xml
+++ b/app/src/main/res/layout/activity_add_papers_service_dialog.xml
@@ -1,12 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+
+    android:background="#ffffff"
     android:layout_height="match_parent"
-    tools:context="governmental.service.egypt.dialogs.AddPapersServiceDialog">
-<TextView
-    android:layout_width="wrap_content"
+    tools:context="governmental.service.egypt.dialogs.AddPapersServiceDialog"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Spinner
+            android:layout_margin="20dp"
+            android:id="@+id/spinner_service"
+            android:background="#df2c2c"
+            android:layout_gravity="center"
+            android:layout_width="300dp"
+            android:layout_height="30dp"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Spinner
+            android:layout_margin="20dp"
+            android:id="@+id/spinner_typeService"
+            android:background="#df2c2c"
+            android:layout_gravity="center"
+            android:layout_width="300dp"
+            android:layout_height="30dp"
+            />
+    </LinearLayout>
+
+
+<LinearLayout
+    android:layout_gravity="start"
+    android:layout_margin="10dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="add paper"/>
-</android.support.constraint.ConstraintLayout>
+    android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/addPaperBt"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/add"/>
+    <TextView
+        android:gravity="start"
+        android:layout_gravity="start"
+        android:id="@+id/addTyprServiseText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:hint="أضف  أوراق  خدمة"
+        android:inputType="text"
+        android:textColor="#000"
+        android:textColorHint="#000" />
+
+
+</LinearLayout>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+
+    <android.support.v7.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</ScrollView>
+
+
+
+    <Button
+        android:layout_margin="10dp"
+        android:id="@+id/CompletService"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="إتمام الإضافة " />
+
+</LinearLayout>
