--- a/app/src/main/res/layout/activity_mapp_places.xml
+++ b/app/src/main/res/layout/activity_mapp_places.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_margin="20dp"
     android:layout_width="match_parent"
@@ -9,7 +10,7 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
+         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <EditText
@@ -29,8 +30,36 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/_200sdp"
         tools:context="governmental.service.egypt.MappPlaces" />
+
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/searchMultiSpinnerUnlimited"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="أختر الخدمة" />
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/searchMultiSpinnerUnlimitedGavernorat"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="المحافظات" />
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/searchMultiSpinnerUnlimitedPlaces"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="المحافظات" />
+
+    <TextView
+         android:textColor="#d26262"
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+
 </LinearLayout>
 
 
