--- a/app/src/main/res/layout/activity_mapp_places.xml
+++ b/app/src/main/res/layout/activity_mapp_places.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    android:layout_margin="20dp"
-    android:layout_width="match_parent"
+     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -14,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/name_of_place"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
@@ -30,7 +29,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
+        android:layout_height="@dimen/_150sdp"
         tools:context="governmental.service.egypt.MappPlaces" />
 
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
@@ -39,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:hintText="أختر الخدمة" />
-    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
-        android:id="@+id/searchMultiSpinnerUnlimitedGavernorat"
+    <com.androidbuts.multispinnerfilter.SingleSpinnerSearch
+        android:id="@+id/searchSingleSpinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -50,10 +49,19 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:hintText="المحافظات" />
+        app:hintText="المناطق الموجود بها " />
+
+
+    <Button
+        android:layout_margin="10dp"
+        android:id="@+id/CompletService"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="إتمام الإضافة " />
 
     <TextView
-         android:textColor="#d26262"
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
