--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-     android:background="#ffffff"
-    android:layout_marginBottom="30dp"
-     tools:context="governmental.service.egypt.dialogs.AddServiceDialog"
-    android:orientation="vertical">
-
-
-     <android.support.design.widget.TextInputLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content">
-
-         <EditText
-             android:id="@+id/addServiseText"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_marginBottom="10dp"
-             android:hint="أضف خدمة"
-             android:inputType="text"
-             android:textColor="#000"
-             android:textColorHint="#000" />
-     </android.support.design.widget.TextInputLayout>
-
-
-    <Button
-        android:id="@+id/CompletService"
-        style="@style/Widget.AppCompat.Button"
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+         xmlns:tools="http://schemas.android.com/tools"
+         xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        tools:context="governmental.service.egypt.dialogs.AddServiceDialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="إتمام الإضافة " />
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#8344b9b5"
+        card_view:cardCornerRadius="25dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-</LinearLayout>
+                <EditText
+                    android:id="@+id/addServiseText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:hint="أضف خدمة"
+                    android:inputType="text"
+                    android:textColor="#000"
+                    android:textColorHint="#000" />
+            </android.support.design.widget.TextInputLayout>
+
+
+            <Button
+                android:layout_marginTop="30dp"
+                android:background="@drawable/rounded_border"
+                android:textColor="#000"
+                 android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                 android:id="@+id/CompletService"
+                style="@style/Widget.AppCompat.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="إتمام الإضافة "
+                android:layout_marginRight="@dimen/_10sdp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
+
