--- a/app/src/main/res/layout/activity_contunio_updating.xml
+++ b/app/src/main/res/layout/activity_contunio_updating.xml
@@ -1,9 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="governmental.service.egypt.ContunioUpdating">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+    <EditText
+        android:layout_marginTop="@dimen/_50sdp"
+        android:id="@+id/name_of_place"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        android:layout_marginBottom="10dp"
+        android:hint="أضف أسم المكان"
+        android:inputType="text"
+        android:textColor="#000"
+        android:textColorHint="#000" />
+
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_150sdp"
+        tools:context="governmental.service.egypt.MappPlaces" />
+
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/searchMultiSpinnerUnlimited"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="أختر الخدمة" />
+    <com.androidbuts.multispinnerfilter.SingleSpinnerSearch
+        android:id="@+id/searchSingleSpinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="المحافظات" />
+    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+        android:id="@+id/searchMultiSpinnerUnlimitedPlaces"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:hintText="المناطق الموجود بها " />
+
+
+    <Button
+        android:layout_margin="15dp"
+        android:id="@+id/CompletService"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="إتمام الإضافة " />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+
+</LinearLayout>
+
+
