--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -10,52 +10,189 @@
     android:orientation="vertical">
 
 
-    <Button
-        android:id="@+id/addService"
+
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         android:text="إضافه خدمه" />
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+         card_view:cardCornerRadius="25dp">
+
+        <Button
+            android:id="@+id/addService"
+
+            android:textStyle="bold"
+            android:textSize="@dimen/_15sdp"
+              android:textColor="#0b084b"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="إضافه خدمة" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+          android:layout_gravity="center"
         android:id="@+id/AllServise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="عرض كل الخدمات الموجوده " />
+    </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
         android:id="@+id/addTypeService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:text="إضافة نوع الخدمة" />
+         android:text="إضافة نوع الخدمة"
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+         android:layout_gravity="center"
+
+        />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
+
+           android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_gravity="center"
         android:id="@+id/AllTypeService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="عرض كل  أنوع الخدمات" />
+    </android.support.v7.widget.CardView>
 
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_gravity="center"
         android:id="@+id/addPapersService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="إضافه أوراق الخدمة" />
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
         android:id="@+id/UpdatePapersService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="تعديل أوراق الخدمة" />
+        android:text="تعديل أوراق الخدمة"
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_gravity="center"
 
+        />
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_gravity="center"
         android:id="@+id/PlacesService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="إضافة  أماكن الخدمة" />
+    </android.support.v7.widget.CardView>
 
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
     <Button
+        android:textStyle="bold"
+        android:textSize="@dimen/_15sdp"
+        android:textColor="#0b084b"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_gravity="center"
         android:id="@+id/UpdatePlaces"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="تعديل أماكن الخدمه" />
+    </android.support.v7.widget.CardView>
 
     <Button
+
         android:visibility="gone"
         android:id="@+id/setting"
         android:layout_width="match_parent"
