--- a/app/src/main/res/layout/activity_add_papers_service_dialog.xml
+++ b/app/src/main/res/layout/activity_add_papers_service_dialog.xml
@@ -47,13 +47,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
+
     <ImageView
-        android:layout_marginStart="@dimen/_10sdp"
         android:id="@+id/addPaperBt"
         android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/add"
-        android:layout_marginLeft="@dimen/_10sdp" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:src="@drawable/add" />
     <TextView
         android:gravity="start"
         android:layout_gravity="start"
