--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:focusable="true"
+    android:layoutDirection="rtl"
         android:padding="@dimen/_20sdp"
         card_view:cardBackgroundColor="#8344b9b5"
         card_view:cardCornerRadius="25dp">
@@ -26,7 +27,7 @@
                     android:layout_marginBottom="10dp"
                     android:hint="أضف خدمة"
                     android:inputType="text"
-                    android:textColor="#000"
+                    android:textColor="#000000"
                     android:textColorHint="#000" />
             </android.support.design.widget.TextInputLayout>
 
@@ -35,16 +36,16 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/rounded_border"
                 android:textColor="#000"
-                 android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
+                 android:layout_marginStart="@dimen/_30sdp"
+                android:layout_marginLeft="@dimen/_30sdp"
+                android:layout_marginEnd="@dimen/_30sdp"
                  android:id="@+id/CompletService"
                 style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+              android:layout_marginBottom="@dimen/_5sdp"
                 android:text="إتمام الإضافة "
-                android:layout_marginRight="@dimen/_10sdp" />
+                android:layout_marginRight="@dimen/_30sdp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
