--- a/app/src/main/res/layout/activity_allservice_show.xml
+++ b/app/src/main/res/layout/activity_allservice_show.xml
@@ -7,12 +7,13 @@
     android:padding="10dp"
     android:orientation="vertical"
     android:layoutDirection="rtl"
-    tools:context="governmental.service.egypt.AllserviceShow">
+    tools:context="governmental.service.egypt.AllserviceShow"
+    tools:ignore="UnusedAttribute">
 
     <TextView
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_gravity="center"
-         android:layout_width="wrap_content"
+        android:layout_width="wrap_content"
         android:text="الخدمات المتاحه"
         android:padding="@dimen/_5sdp"
         android:gravity="center"
@@ -20,6 +21,15 @@
         android:textColor="#000"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
+    <View
+        android:background="#63d4d0"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/_8sdp"
+        android:layout_height="@dimen/_2sdp"
+        android:layout_marginLeft="@dimen/_10sdp" />
 
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
