--- a/app/src/main/res/layout/activity_contunio_updating_places.xml
+++ b/app/src/main/res/layout/activity_contunio_updating_places.xml
@@ -30,7 +30,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_height="@dimen/_200sdp"
         tools:context="governmental.service.egypt.MappPlaces" />
 
     <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
@@ -116,7 +116,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                app:hintText="إختار المناطق" />
+                app:hintText="إختار المدن" />
+            <TextView
+                android:layout_weight=".5"
+                android:textSize="@dimen/_15sdp"
+                android:textColor="#b73434"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="تعديل المناطق الموجود بها->> "/>
+
+        </LinearLayout>
+        <TextView
+            android:layout_gravity="end"
+            android:textColor="#000"
+            android:layout_weight="1"
+            android:textSize="@dimen/_15sdp"
+            android:text="إسم الحي "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+                android:id="@+id/searchMultiSpinnerUnlimitedPlacesSupArea"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:hintText=" الحي  " />
             <TextView
                 android:layout_weight=".5"
                 android:textSize="@dimen/_15sdp"
