--- a/app/src/main/res/layout/all_servise_row.xml
+++ b/app/src/main/res/layout/all_servise_row.xml
@@ -11,43 +11,53 @@
 
 
 
-
-
-    <LinearLayout
-        android:background="#efeaea"
-        android:orientation="horizontal"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
-
-
-
-
-
-        <TextView
-            android:layout_weight="2"
-            android:id="@+id/title"
-            android:textColor="#000"
-            android:layoutDirection="rtl"
-            android:layout_width="@dimen/_120sdp"
+        android:layout_margin="5dp"
+        android:focusable="true"
+        android:padding="@dimen/_20sdp"
+        card_view:cardBackgroundColor="#63d4d0"
+        card_view:cardCornerRadius="25dp">
+        <LinearLayout
+             android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/position"
-            android:textSize="15sp"
-            android:text="title" />
-        <ImageButton
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:gravity="end"
-            android:id="@+id/update"
-            android:layout_width="@dimen/_20sdp"
-            android:layout_height="@dimen/_20sdp"
-            android:src="@drawable/hand"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:background="@android:color/transparent"
-            android:padding="0dp"
-            />
+            android:padding="10dp">
 
-    </LinearLayout>
+
+
+
+
+            <TextView
+                android:layout_weight="2"
+                android:id="@+id/title"
+                android:textColor="#000"
+                android:layoutDirection="rtl"
+                android:layout_width="@dimen/_120sdp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/position"
+                android:textSize="15sp"
+                android:text="title" />
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:gravity="end"
+                android:id="@+id/update"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:src="@drawable/hand"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
+                android:padding="0dp"
+                />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
