--- a/app/src/main/res/layout/activity_contunio_updating_places.xml
+++ b/app/src/main/res/layout/activity_contunio_updating_places.xml
@@ -126,15 +126,31 @@
                 android:text="تعديل المناطق الموجود بها->> "/>
 
         </LinearLayout>
-        <TextView
-            android:layout_gravity="end"
-            android:textColor="#000"
-            android:layout_weight="1"
-            android:textSize="@dimen/_15sdp"
-            android:text="إسم الحي "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_gravity="end"
+                android:textColor="#000"
+                android:layout_weight="1"
+                android:id="@+id/supAreasNames"
+                android:textSize="@dimen/_15sdp"
+                android:text="الاسماء الموجوه"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:layout_gravity="end"
+                android:textColor="#000"
+                android:layout_weight="1"
+                android:textSize="@dimen/_15sdp"
+                android:text="إسم الحي "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
+
         <LinearLayout
 
             android:layout_width="match_parent"
